1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* THANKS: Added Miles Bader.

1999-06-01  Miles Bader  <miles@ccs.mt.nec.co.jp>

	* m4/depend.m4 (AM_DEPENDENCIES): Add check for `makedepend'.
	Fix `dashmstdout' to ignore non-dependency-generating uses of the
	-M flag.
	* depcomp (makedepend): New dependency-generating method.

1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* missing: If given `--run' as first argument, try to run the
	given program before falling back to the ``emulated'' behavior.
	Add support for `tar'.
	* automake.in: Use new `tar' support for `dist'.
	* m4/missing.m4 (AM_MISSING_PROG): Instead of checking for the
	program, prepend `missing --run' to the given program name.
	* m4/init.m4: Remove AMTAR-related stuff.
	* NEWS: Updated.

	* m4/depout.m4: Instead of `find'ing Makefiles, just iterate on
	CONFIG_FILES.  Do not use temporary variable for list of
	dependency files, it breaks Cygwin.

1999-04-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* depcomp (gcc): Imported comments removed from depend2.am, so
	that we don't lose them.

	* m4/depout.m4 (AM_OUTPUT_DEPENDENCY_COMMANDS): Avoid sed s/$U//
	when not using ansi2knr.

1999-04-26  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* m4/depend.m4 (AM_DEPENDENCIES): Test for depcc -E support.
	* depcomp (cpp): Extract dependencies from `# nnn "..."' lines.

1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* m4/depend.m4 (AM_DEPENDENCIES): Add a definition to conftest.h,
	so as not to compile an empty source; some compilers fail on this.
	Redirect stderr of depcc to /dev/null.  Test for -M with -o,
	because some compilers will output the rules to the output file.
	* depcomp (dashmstdout): Add --silent before --mode=compile, so
	that we don't get libtool output mixed up with make rules.

	* m4/init.m4 (AM_INIT_AUTOMAKE): Require AM_SET_DEPDIR.
	* depend2.am: Set tmpdepfile too, to speed up depcomp.  Always use 
	-o for libtool, otherwise it may try to deduce the object name